[project]
name = "ComfyUI-Anima-NAG"
description = "Experimental Normalized Attention Guidance node for Anima Preview 3 in ComfyUI."
version = "0.1.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/hybskgks28275/ComfyUI-Anima-NAG"

[tool.comfy]
PublisherId = "hybskgks28275"
DisplayName = "ComfyUI-Anima-NAG"
Icon = ""
